# jax-examples

./: .env  README.md  pyproject.toml
mnist/: README.md
mnist/mnist/: io.py  keras.py  nnx.py
mnist/scripts/: journal_20250903_01_minst.py  journal_20250915_01_minst.py  journal_20250916_understanding_tfds.py
